# hypershift

./: .actionlint.yaml  .ci-operator.yaml  .codecov.yml  .coderabbit.yaml  .codespellignore  .containerignore  .custom-gcl.yml  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitlint  .golangci-kubeapi.yml  .golangci.yml  .ko.yaml  .pre-commit-config.yaml  .snyk  .testcoverage.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Containerfile.cli  Containerfile.control-plane  Containerfile.control-plane.dev  Containerfile.operator  DEPENDENCIES.md  DEVELOPMENT.md  Dockerfile  Dockerfile.control-plane  Dockerfile.dev  Dockerfile.e2e  Dockerfile.fast  Dockerfile.github-actions-runner  Dockerfile.test-extend  HACKING.md  Makefile  OWNERS  OWNERS_ALIASES  PLATFORM_PROVIDER_PROPOSAL.md  (+25 more)
.chai-bot/: ci-status-jobs.yaml  hypershift_ci_daily_health_report.md
.claude/: SKILLS.md  settings.json
.claude-plugin/: plugin.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yaml  labels.yaml
.tekton/: OWNERS  control-plane-operator-4-14-pull-request.yaml  control-plane-operator-4-14-push.yaml  control-plane-operator-4-15-pull-request.yaml  control-plane-operator-4-15-push.yaml  control-plane-operator-4-16-pull-request.yaml  control-plane-operator-4-16-push.yaml  control-plane-operator-4-17-pull-request.yaml  control-plane-operator-4-17-push.yaml  control-plane-operator-4-18-pull-request.yaml  (+92 more)
contrib/repo_metrics/: README.md  ai_assisted_commits.py  pyproject.toml  test_ai_assisted_commits.py  test_data.txt  weekly_pr_report.py
(+6589 files in other folders)
