[project]
name = "repo-metrics"
version = "0.1.0"
description = "Repository metrics and analysis tools"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ai_assisted_commits"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
